# data-arch-brain

./: .gitignore  CLAUDE.md  DOMAINS_FIX_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  MANUAL.md  MANUAL_ver1.md  Makefile  README.md  RENAMING_PLAN.md  REVIEW_FINDINGS.md  TEXT_COLOR_FIX_SUMMARY.md  commercial_flexible_table.dot  commercial_flexible_table.mmd  log.txt  snowflake_key.p8  snowflake_key.pub
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  20241214_data_products.py  20241216_tag_edges.py  20241218_phase1_structural_metadata.py  20241218_phase2_semantic_metadata.py  20241218_phase3_quality_expectations.py  20241218_phase4_policy_metadata.py  20241218_phase5_6_provenance_contracts.py  20241218_phase7_integration_polish.py  20241228_airflow_orchestration.py  20241229_airflow_column_lineage.py  20241229_phase8_impact.py  20251211_2103_3aa00f7cbf3a_add_timestamp_columns_to_ingestion_jobs.py
backend/migrations/: add_data_products_and_tags.sql
backend/scripts/: README_FINANCE_SEED.md  flush_airflow_data.py  seed_example_capsules.py  seed_finance_capsules.py  verify_finance_seed.py
backend/src/: cache.py  config.py  database.py  logging_config.py  metrics.py  tracing.py
backend/src/api/: auth.py  dependencies.py  exceptions.py  main.py  middleware.py  rate_limit.py
backend/src/api/routers/: __init__.py  business_terms.py  capsule_contracts.py  capsule_versions.py  capsules.py  catalog.py  column_profiles.py  columns.py  compliance.py  conformance.py  constraints.py  data_policies.py  domains.py  graph.py  health.py  impact_analysis.py  indexes.py  ingest.py  masking_rules.py  pipelines.py  products.py  quality_rules.py  redundancy.py  reports.py  sla_incidents.py  tags.py  transformation_code.py  value_domains.py  violations.py
backend/src/api/schemas/: __init__.py  (+13 more)
backend/src/cli/: __init__.py  main.py
backend/src/models/: __init__.py  base.py  business_term.py  capsule.py  capsule_contract.py  capsule_version.py  column.py  column_profile.py  constraint.py  data_policy.py  data_product.py  domain.py  impact_alert.py  impact_history.py  index.py  ingestion.py  lineage.py  masking_rule.py  orchestration_edge.py  pipeline.py  quality_rule.py  rule.py  sla_incident.py  source_system.py  tag.py  task_dependency.py  transformation_code.py  value_domain.py  violation.py
backend/src/parsers/: __init__.py  airflow_config.py  airflow_parser.py  base.py  data_flow_annotations.py  dbt_config.py  dbt_manifest_resolver.py  dbt_parser.py  snowflake_config.py  snowflake_parser.py  snowflake_queries.py  sql_column_parser.py  sql_parser.py
backend/src/repositories/: __init__.py  base.py  business_term.py  capsule.py  capsule_contract.py  capsule_version.py  column.py  column_lineage.py  column_profile.py  constraint.py  data_policy.py  data_product.py  domain.py  impact_alert.py  impact_history.py  index.py  ingestion.py  lineage.py  masking_rule.py  pipeline.py  quality_rule.py  rule.py  sla_incident.py  source_system.py  tag.py  task_dependency.py  transformation_code.py  value_domain.py  violation.py
backend/src/services/: __init__.py  cached.py  compliance.py  conformance.py  graph_export.py  impact_simulation.py  ingestion.py  lineage.py  redundancy.py  secret_redaction.py  slo.py  task_impact.py  temporal_impact.py
backend/src/utils/: retry.py
backend/tests/: conftest.py  test_conformance_extended.py
backend/tests/integration/: test_airflow_data_flow.py  test_api.py  test_column_lineage.py  test_conformance_api.py  test_ingestion_secret_redaction.py  test_phase1_2_api.py  test_phase3_4_api.py  test_phase4_orchestration_api.py  test_phase5_6_api.py  test_phase7_catalog_api.py  test_snowflake_api.py  test_snowflake_cli.py
backend/tests/parsers/: test_airflow_parser.py  test_dbt_parser.py
backend/tests/unit/: test_api_ingest.py  test_auth.py  test_business_term.py  test_cache.py  test_capsules_api.py  test_cli.py  test_column_profile.py  test_compliance_service.py  test_config_validation.py  test_conformance_service.py  test_constraint.py  test_data_policy.py  test_data_product.py  test_graph_api.py  test_graph_export.py  test_health.py  test_index.py  test_ingestion_service.py  test_masking_rule.py  test_metrics.py  test_middleware.py  test_models.py  test_phase1_2_repositories.py  test_phase3_4_repositories.py  test_phase3_column_lineage.py  test_phase3_unit.py  test_phase5_6_repositories.py  test_pipeline_models.py  test_pipeline_relationships.py  test_pipeline_repository.py  test_products_api.py  test_quality_rule.py  test_redundancy_api.py  test_redundancy_service.py  test_repositories.py  test_secret_redaction.py  test_slo_service.py  test_tag.py  test_tag_repository.py  test_tracing.py  (+1 more)
(+152 files in other folders)
