[project]
name = "data-arch-brain"
version = "0.1.0"
description = "A read-only architecture intelligence platform for data landscape analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Data Architecture Team" }
]
keywords = ["data", "architecture", "lineage", "metadata", "dbt", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",

    # Parsing & Data
    "orjson>=3.9.0",
    "pyyaml>=6.0.0",
    "ruamel.yaml>=0.18.0",

    # HTTP client (for future integrations)
    "httpx>=0.26.0",

    # Templating (for reports)
    "jinja2>=3.1.0",

    # Logging
    "structlog>=24.1.0",

    # Utilities
    "python-multipart>=0.0.6",

    # Security & Rate Limiting
    "slowapi>=0.1.9",

    # Caching
    "redis>=5.0.0",

    # Metrics & Observability
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.1.0",

    # Distributed Tracing (OpenTelemetry)
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.19.0",
    "faker>=38.0.0",

    # Linting & Formatting
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "isort>=5.13.0",

    # Type stubs
    "types-pyyaml>=6.0.0",
    "types-python-dateutil>=2.8.0",

    # Pre-commit
    "pre-commit>=3.6.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
dab = "src.cli.main:app"

[project.urls]
Homepage = "https://github.com/example/data-arch-brain"
Documentation = "https://github.com/example/data-arch-brain#readme"
Repository = "https://github.com/example/data-arch-brain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "S101"]
"alembic/*" = ["F401"]

[tool.ruff.isort]
known-first-party = ["src"]

# Black configuration
[tool.black]
target-version = ["py311"]
line-length = 100

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "uvicorn.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
